src/aadesaed/gyreas/klox/Parser.kt
package aadesaed.gyreas.klox

import Token
import TokenType
import TokenType.*
import aadesaed.gyreas.klox.error as KLoxError


class Parser(private val tokens: ArrayList<Token>) {
    private var current: Int = 0

    class ParseError : RuntimeException() {}

    fun parse(): Expr? {
        return try {
            expressionSeq()
        } catch (error: ParseError) {
            null
        }
    }

    private fun expressionSeq(): Expr {
        var expr = expression()
        while (match(COMMA)) {
            expr = expression()
        }
        return expr
    }

    private fun expression(): Expr {
        return equality()
    }

    private fun equality(): Expr {
        var expr = comparison()

        while (match(BANG_EQUAL, EQUAL_EQUAL)) {
            val operator: Token = previous()
            val right: Expr = comparison()
            expr = Binary(expr, operator, right)
        }

        return expr
    }

    private fun match(vararg types: TokenType): Boolean {
        for (type in types) {
            if (check(type)) {
                advance()
                return true
            }
        }

        return false
    }

    private fun check(type: TokenType): Boolean {
        if (isAtEnd()) return false
        return peek().type === type
    }

    private fun advance(): Token {
        if (!isAtEnd()) current++
        return previous()
    }

    private fun isAtEnd(): Boolean {
        return peek().type === EOF
    }

    private fun peek(): Token {
        return tokens[current]
    }

    private fun previous(): Token {
        return tokens[current - 1]
    }

    private fun comparison(): Expr {
        var expr: Expr = term()

        while (match(GREATER, GREATER_EQUAL, LESS, LESS_EQUAL)) {
            val operator = previous()
            val right: Expr = term()
            expr = Binary(expr, operator, right)
        }

        return expr
    }

    private fun term(): Expr {
        var expr: Expr = factor()

        while (match(MINUS, PLUS)) {
            val operator = previous()
            val right: Expr = factor()
            expr = Binary(expr, operator, right)
        }

        return expr
    }

    private fun factor(): Expr {
        var expr: Expr = unary()

        while (match(SLASH, STAR)) {
            val operator = previous()
            val right: Expr = unary()
            expr = Binary(expr, operator, right)
        }

        return expr
    }

    private fun unary(): Expr {
        if (match(BANG, MINUS)) {
            val operator = previous()
            val right = unary()
            return Unary(operator, right)
        }

        return primary()
    }

    private fun primary(): Expr {
        when {
            match(FALSE) -> return Literal(false)
            match(TRUE) -> return Literal(true)
            match(NIL) -> return Literal(null)
            match(NUMBER, STRING) -> return Literal(previous().literal)
            match(LEFT_PAREN) -> {
                val expr = expressionSeq()
                consume(RIGHT_PAREN, "Expect ')' after expression.")
                return Grouping(expr)
            }

            else -> {
                throw error(peek(), "Expect expression.")
            }
        }
    }

    private fun consume(type: TokenType, message: String): Token {
        if (check(type)) return advance()

        throw error(peek(), message)
    }

    private fun error(token: Token, message: String): ParseError {
        KLoxError(token, message)
        return ParseError()
    }

    private fun synchronize() {
        advance()

        while (!isAtEnd()) {
            if (previous().type === SEMICOLON) return

            when (peek().type) {
                CLASS, FUN, VAR, FOR, IF, WHILE, PRINT, RETURN -> return
                else -> {}
            }
            advance()
        }
    }
}